--- a/david-sferruzza-fr.cabal
+++ b/david-sferruzza-fr.cabal
@@ -16,5 +16,6 @@ executable david-sferruzza-fr
   main-is:             site.hs
   build-depends:       base >=4.6 && <4.7
                      , hakyll == 4.5.3.0
+                     , network == 2.5.0.0
   ghc-options:         -O3 -Wall -threaded
   default-language:    Haskell2010
