--- a/david-sferruzza-fr.cabal
+++ b/david-sferruzza-fr.cabal
@@ -18,5 +18,8 @@ executable david-sferruzza-fr
                      , hakyll == 4.5.3.0
                      , network
                      , text
+                     , old-locale
+                     , time
+                     , containers
   ghc-options:         -O3 -Wall -threaded
   default-language:    Haskell2010
