--- a/david-sferruzza-fr.cabal
+++ b/david-sferruzza-fr.cabal
@@ -7,7 +7,7 @@ license:             MIT
 license-file:        LICENSE
 author:              David Sferruzza
 maintainer:          david.sferruzza@gmail.com
-copyright:           2014 David Sferruzza
+copyright:           2014-2016 David Sferruzza
 category:            Personal
 build-type:          Simple
 cabal-version:       >=1.10
